# fastapi-mcp

./: .gitignore  README.md  docker-compose.yml  main.py  run_mcp.bat  run_mcp.sh
dashboards/: kibana-dashboard.ndjson
fastapi-mcp-server/: .gitignore  AI_ASSISTANT_INTEGRATION.md  README.md  docker-compose.yml  fastapi_mcp_server.py  pyproject.toml  run_mcp.ps1  run_mcp.sh  setup_kibana_dashboard.py  test_client.py
fastapi-mcp-server/src/: config.py  document_fetcher.py  document_processor.py  interfaces.py  search_engine.py
fastapi-mcp-server/tests/: test_data_loader.py  test_document_processor.py  test_integration.py  test_mcp_server.py  test_search_engine.py
scripts/: data_loader_cli.py
src/: data_loader.py  mcp_server.py
tests/: conftest.py  test_document_fetcher.py  test_search_engine.py
